Fix footer contact form size on mobile

--- a/design/scss/main.scss
+++ b/design/scss/main.scss
@@ -3790,7 +3790,7 @@
 				width: 100%;
 			}
 
-				.page-footer .inner form {
+				.page-footer .inner .contact {
 					width: 100%;
 					margin: 0 0 4em 0;
 				}
@@ -3817,7 +3817,7 @@
 				padding: 2em 2em 0.1em 2em ;
 			}
 
-				.page-footer .inner form {
+				.page-footer .inner contact {
 					margin: 0 0 3em 0;
 				}
 
